name:                sdr
version:             0.1.0.0
synopsis:            Software defined radio library
description:         A Software Defined Radio Library. 
license:             BSD3
license-file:        LICENSE
author:              Adam Walker
maintainer:          adamwalker10@gmail.com
copyright:           2014 Adam Walker
category:            Software Defined Radio
homepage:            https://github.com/adamwalker/sdr
bug-reports:         https://github.com/adamwalker/sdr/issues
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
    type: git
    location: https://github.com/adamwalker/sdr

library
    exposed-modules:     
        SDR.Pulse, 
        SDR.RTLSDRStream, 
        SDR.Util, 
        SDR.Plot, 
        SDR.Filter, 
        SDR.Demod, 
        SDR.FFT, 
        SDR.FilterInternal, 
        SDR.Serialize, 
        SDR.PipeUtils, 
        SDR.VectorUtils, 
        SDR.ArgUtils, 
        SDR.FilterDesign
    -- other-modules:       
    other-extensions:    ScopedTypeVariables, GADTs
    build-depends:       
        base                 >=4.6  && <4.9, 
        fftw                 >=0.1  && <0.2, 
        bytestring           >=0.10 && <0.11, 
        pulse-simple         >=0.1  && <0.2, 
        pipes                >=4.1  && <4.2, 
        pipes-concurrency    >=2.0  && <2.1, 
        either               >=4.1  && <4.4, 
        time                 >=1.4  && <1.6, 
        rtlsdr               >=0.1  && <0.2, 
        storable-complex     >=0.2  && <0.3, 
        pipes-bytestring     >=2.0  && <2.2, 
        dynamic-graph        >=0.1  && <0.2, 
        array                >=0.4  && <0.6, 
        vector               >=0.10 && <0.11,
        tuple                >=0.2  && <0.4, 
        OpenGL, 
        GLFW-b, 
        primitive, 
        colour, 
        pango, 
        containers, 
        cairo, 
        cereal, 
        optparse-applicative, 
        Decimal, 
        Chart                >=1.3  && <1.5, 
        Chart-cairo
    -- hs-source-dirs:      
    default-language:    Haskell2010
    ghc-options:         -O2
    -- includes:            c_sources/common.h
    c-sources:           
        c_sources/filter.c, 
        c_sources/decimate.c, 
        c_sources/convert.c, 
        c_sources/resample.c, 
        c_sources/scale.c
    hs-source-dirs:      hs_sources
    cc-options:          -mavx2 -msse4 -g

Test-Suite test
    type:                exitcode-stdio-1.0
    main-is:             TestSuite.hs
    build-depends:       
        base, 
        QuickCheck, 
        vector, 
        sdr, 
        primitive, 
        storable-complex
    hs-source-dirs:      tests
    ghc-options:         -O2
    default-language:    Haskell2010

benchmark benchmark
    type:                exitcode-stdio-1.0
    main-is:             Benchmarks.hs
    build-depends:       
        base, 
        criterion, 
        vector, 
        sdr, 
        primitive, 
        storable-complex
    hs-source-dirs:      benchmarks
    ghc-options:         -O2
    default-language:    Haskell2010
    
